# simplecoder-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
simplecoder/: agent.py  context.py  main.py  permissions.py  planner.py  rag.py  tools.py
